--- a/RadyoKlasikServer/templates/dashboard.html
+++ b/RadyoKlasikServer/templates/dashboard.html
@@ -7,7 +7,7 @@
       let intervalId;
 
       function startRecording() {
-        fetch("/start", { method: "POST" }).then((response) => {
+        fetch("recording/start", { method: "POST" }).then((response) => {
           if (response.ok) {
             intervalId = setInterval(updateRecordingTime, 1000);
           }
@@ -15,7 +15,7 @@
       }
 
       function stopRecording() {
-        fetch("/stop", { method: "POST" }).then((response) => {
+        fetch("recording/stop", { method: "POST" }).then((response) => {
           if (response.ok) {
             clearInterval(intervalId);
             document.getElementById("recording-time").innerText =
@@ -25,7 +25,7 @@
       }
 
       function updateRecordingTime() {
-        fetch("/status")
+        fetch("recording/status")
           .then((response) => response.json())
           .then((data) => {
             if (data.is_recording) {
@@ -43,7 +43,7 @@
   <body>
     <h1>Admin Dashboard</h1>
     <p>Welcome to the admin dashboard!</p>
-    <a href="{{ url_for('main.logout') }}">Logout</a>
+    <a href="{{ url_for('auth.logout') }}">Logout</a>
     <h1>MP3 Stream Recorder</h1>
     <form
       action="javascript:void(0);"
