--- a/RadyoKlasikServer/templates/login.html
+++ b/RadyoKlasikServer/templates/login.html
@@ -5,11 +5,13 @@
     <title>Login</title>
   </head>
   <body>
-    <h1>Login</h1>
-    <form method="post">
-      <input type="text" name="username" placeholder="Username" />
-      <input type="password" name="password" placeholder="Password" />
-      <button type="submit">Login</button>
-    </form>
+    <div>
+      <h1>Login</h1>
+      <form method="post">
+        <input type="text" name="username" placeholder="Username" />
+        <input type="password" name="password" placeholder="Password" />
+        <button type="submit">Login</button>
+      </form>
+    </div>
   </body>
 </html>
