--- a/RadyoKlasikServer/templates/login.html
+++ b/RadyoKlasikServer/templates/login.html
@@ -2,16 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='styles/Login.css') }}"
+    />
     <title>Login</title>
   </head>
   <body>
-    <div>
-      <h1>Login</h1>
-      <form method="post">
-        <input type="text" name="username" placeholder="Username" />
-        <input type="password" name="password" placeholder="Password" />
-        <button type="submit">Login</button>
-      </form>
+    <div class="container">
+      <h1><a>Adminastirator Dashboard Authentication</a></h1>
+      <div>
+        <div class="formbg">
+          <div class="formbg-inner padding-horizontal--48">
+            <span class="padding-bottom--15">Sign in to your account</span>
+            <form method="post">
+              <div class="field padding-bottom--24">
+                <label for="username">Username</label>
+                <input type="text" name="username" placeholder="Username" />
+              </div>
+              <div class="field padding-bottom--24">
+                <label for="password">Password</label>
+                <input type="password" name="password" placeholder="Password" />
+              </div>
+
+              <div class="field padding-bottom--24">
+                <input type="submit" name="submit" value="Continue" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
