fix(backend): usage of default artwork and sort recordings based on date

--- a/RadyoKlasikServer/templates/dashboard.html
+++ b/RadyoKlasikServer/templates/dashboard.html
@@ -39,6 +39,7 @@
     </style>
     <script>
       let intervalId;
+      let selectedArtwork = null;
 
       function startRecording() {
         fetch("recording/start", { method: "POST" }).then((response) => {
