feat(backend): add new fields to Recording model

--- a/RadyoKlasikServer/templates/dashboard.html
+++ b/RadyoKlasikServer/templates/dashboard.html
@@ -170,7 +170,7 @@
   </head>
   <body>
     <h1>Admin Dashboard</h1>
-    <p>Welcome to the admin dashboard!</p>
+    <h2 style="font-weight: 400">Haymi, welcome to the admin dashboard!</h2>
     <a href="{{ url_for('auth.logout') }}">Logout</a>
     <button id="expand-button" onclick="toggleExpand()">Expand</button>
     <div style="display: flex; flex-direction: row">
