--- a/RadyoKlasikServer/templates/dashboard.html
+++ b/RadyoKlasikServer/templates/dashboard.html
@@ -8,224 +8,10 @@
       type="text/css"
       href="{{ url_for('static',filename='styles/dashboard.css') }}"
     />
-    <script>
-      let intervalId;
-      let selectedArtwork = null;
-      let isExpanded = false;
-
-      function startRecording() {
-        fetch("recording/start", { method: "POST" }).then((response) => {
-          if (response.ok) {
-            intervalId = setInterval(updateRecordingTime, 1000);
-          }
-        });
-      }
-
-      function stopRecording() {
-        fetch("recording/stop", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/x-www-form-urlencoded",
-          },
-          body: selectedArtwork ? `existing-artworks=${selectedArtwork}` : "",
-        }).then((response) => {
-          if (response.ok) {
-            clearInterval(intervalId);
-            document.getElementById("recording-time").innerText = "Stopped.";
-            document.getElementById("recording-time").style.fontSize = "16px";
-            document.getElementById("rec-stat").style.backgroundColor =
-              "#3c3c3c";
-            fetchRecordings();
-          }
-        });
-      }
-
-      function updateRecordingTime() {
-        fetch("recording/status")
-          .then((response) => response.json())
-          .then((data) => {
-            if (data.is_recording) {
-              if (intervalId == null) {
-                intervalId = setInterval(updateRecordingTime, 1000);
-              }
-              const elapsedTime = Math.floor(data.elapsed_time);
-              const minutes = Math.floor(elapsedTime / 60);
-              const seconds = elapsedTime % 60;
-              document.getElementById(
-                "recording-time"
-              ).innerText = `${minutes}m ${seconds}s`;
-              document.getElementById("recording-time").style.fontSize = "20px";
-              document.getElementById("rec-stat").style.backgroundColor =
-                "#EF5350";
-            }
-          });
-      }
-
-      function fetchArtworks() {
-        fetch("recording/get_artworks")
-          .then((response) => response.json())
-          .then((data) => {
-            const container = document.getElementById("artworks-container");
-            container.innerHTML = "";
-            const artworksToShow = isExpanded ? data : data.slice(0, 4);
-            artworksToShow.forEach((artwork) => {
-              const img = document.createElement("img");
-              img.src = `/static/assets/thumbnails/${artwork}`;
-              img.classList.add("artwork");
-              img.onclick = () => selectArtwork(img, artwork);
-              container.appendChild(img);
-            });
-          });
-      }
-
-      function selectArtwork(img, artwork) {
-        const artworks = document.querySelectorAll(".artwork");
-        artworks.forEach((a) => a.classList.remove("selected"));
-        img.classList.add("selected");
-        selectedArtwork = artwork;
-      }
-
-      function fetchRecordings() {
-        fetch("recording/recordings")
-          .then((response) => response.json())
-          .then((data) => {
-            const container = document.getElementById("recordings-container");
-            container.innerHTML = "";
-            data.recordings.sort((a, b) => new Date(b.date) - new Date(a.date));
-            const recordingsToShow = isExpanded
-              ? data.recordings
-              : data.recordings.slice(0, 8);
-            recordingsToShow.forEach((recording) => {
-              const div = document.createElement("div");
-              div.classList.add("recording");
-              div.innerHTML = `
-              <img src="${recording.artwork}" alt="Artwork" />
-                <div><strong>Title:</strong> ${recording.title}</div>
-                <div><strong>Artist:</strong> ${recording.artist}</div>
-                <div><strong>Duration:</strong> ${Math.floor(
-                  recording.duration / 60
-                )}m ${recording.duration % 60}s</div>
-                <div><a href="${recording.stream}">Download</a></div>
-                <form id="replacement-form-${
-                  recording.id
-                }" onsubmit="return false;">
-            <input type="file" name="replacement" accept="audio/mp3" style="display: none;" onchange="autoSubmitReplacementForm('${
-              recording.id
-            }')" />
-            <button type="button" onclick="triggerReplacementInput('${
-              recording.id
-            }')">Upload Replacement</button>
-            <input type="hidden" name="recording_id" value="${recording.id}">
-          </form>
-                <button style="background-color: var(--theme-red); box-shadow: none" onclick="removeRecording('${
-                  recording.id
-                }')">Remove</button>
-              `;
-              container.appendChild(div);
-            });
-          });
-      }
-
-      function uploadReplacement(event, recordingId) {
-        event.preventDefault();
-        const form = event.target;
-        const formData = new FormData(form);
-        formData.append("recording_id", recordingId);
-
-        fetch("recording/replace", {
-          method: "POST",
-          body: formData,
-        }).then((response) => {
-          if (response.ok) {
-            fetchRecordings();
-          }
-        });
-      }
-
-      function removeRecording(recordingId) {
-        fetch(`recording/remove/${recordingId}`, {
-          method: "DELETE",
-        }).then((response) => {
-          if (response.ok) {
-            fetchRecordings();
-          }
-        });
-      }
-
-      async function removeSelectedArtwork() {
-        if (selectedArtwork) {
-          try {
-            const response = await fetch(
-              `recording/remove_artwork/${selectedArtwork}`,
-              {
-                method: "DELETE",
-              }
-            );
-            if (response.ok) {
-              fetchArtworks();
-              alert("ng");
-              selectedArtwork = null;
-            } else {
-              const data = await response.json();
-              alert(
-                data.error ||
-                  "An error occurred while trying to remove the artwork."
-              );
-            }
-          } catch (error) {
-            alert("An error occurred while trying to remove the artwork.");
-          }
-        } else {
-          alert("Please select an artwork to remove.");
-        }
-      }
-
-      function triggerFileInput() {
-        document.getElementById("file-upload-input").click();
-      }
-
-      function autoSubmitForm() {
-        const form = document.getElementById("upload-artwork-form");
-        form.submit();
-      }
-
-      function autoSubmitReplacementForm(recordingId) {
-        const formReplace = document.getElementById(
-          `replacement-form-${recordingId}`
-        );
-        const formData = new FormData(formReplace);
-
-        fetch("recording/replace", {
-          method: "POST",
-          body: formData,
-        }).then((response) => {
-          if (response.ok) {
-            fetchRecordings();
-          }
-        });
-      }
-
-      function triggerReplacementInput(recordingId) {
-        document
-          .querySelector(`#replacement-form-${recordingId} input[type="file"]`)
-          .click();
-      }
-
-      function toggleExpand() {
-        isExpanded = !isExpanded;
-        fetchArtworks();
-        fetchRecordings();
-        document.getElementById("expand-button").innerText = isExpanded
-          ? "Collapse"
-          : "Expand";
-      }
-
-      document.addEventListener("DOMContentLoaded", function () {
-        fetchArtworks();
-        fetchRecordings();
-        updateRecordingTime();
-      });
-    </script>
+    <script
+      src="{{ url_for('static', filename='scripts/dashboard.js') }}"
+      defer
+    ></script>
   </head>
   <body>
     <h1>Admin Dashboard</h1>
