--- a/RadyoKlasikServer/templates/login.html
+++ b/RadyoKlasikServer/templates/login.html
@@ -25,6 +25,9 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" placeholder="Password" />
               </div>
+              {% if error %}
+              <p style="color: red">{{ error }}</p>
+              {% endif %}
 
               <div class="field padding-bottom--24">
                 <input type="submit" name="submit" value="Continue" />
