--- a/RadyoKlasikServer/templates/dashboard.html
+++ b/RadyoKlasikServer/templates/dashboard.html
@@ -8,6 +8,9 @@
       type="text/css"
       href="{{ url_for('static',filename='styles/dashboard.css') }}"
     />
+    <script>
+      const SHARED_SECRET_KEY = "{{ shared_secret_key }}";
+    </script>
     <script
       src="{{ url_for('static', filename='scripts/dashboard.js') }}"
       defer
