feat(backend): notification center page to send notifs automatically
- TASK(backend): Add tokenRequired middleware (also on mobile)

 - TASK(frontend): Use async storage to make notif init run only once

--- a/RadyoKlasikServer/views/dashboard.ejs
+++ b/RadyoKlasikServer/views/dashboard.ejs
@@ -30,6 +30,9 @@
       >
     </form>
     <button id="expand-button" onclick="toggleExpand()">Expand</button>
+    <a href="/notification/notification-center">
+      <button type="button">Notification Center</button>
+    </a>
     <div style="display: flex; flex-direction: row">
       <div>
         <div class="card">
