--- a/RadyoKlasikServer/views/dashboard.ejs
+++ b/RadyoKlasikServer/views/dashboard.ejs
@@ -30,7 +30,7 @@
       >
     </form>
     <button id="expand-button" onclick="toggleExpand()">Expand</button>
-    <a href="/notification/notification-center">
+    <a id="notification-center-link" href="/notification/notification-center">
       <button type="button">Notification Center</button>
     </a>
     <div style="display: flex; flex-direction: row">
