feat(backend): finalize routes for announcements

--- a/RadyoKlasikServer/views/dashboard.ejs
+++ b/RadyoKlasikServer/views/dashboard.ejs
@@ -33,6 +33,11 @@
     <a id="notification-center-link" href="/notification/notification-center">
       <button type="button">Notification Center</button>
     </a>
+
+    <a id="announcement-center-link" href="/recording/announcement-center">
+      <button type="button">Announcement Center</button>
+    </a>
+
     <div style="display: flex; flex-direction: row">
       <div>
         <div class="card">
