feat(backend): chat routes finalized

--- a/RadyoKlasikServer/views/dashboard.ejs
+++ b/RadyoKlasikServer/views/dashboard.ejs
@@ -38,6 +38,10 @@
       <button type="button">Announcement Center</button>
     </a>
 
+    <a id="chat-center-link" href="/chat">
+      <button type="button">Chat Center</button>
+    </a>
+
     <div style="display: flex; flex-direction: row">
       <div>
         <div class="card">
